# qrcode-3d-print

./: .gitignore  README.md  main.py  pyproject.toml  qr_code_3d.gltf
