[project]
name = "qrcode-3d-print"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ocp-tessellate",
    "pip>=24.3.1",
    "build123d",
    "cadquery-ocp",
    "ocp-vscode>=2.5.3",
    "ipdb>=0.13.13",
    "qrcode>=8.0",
    "pillow>=11.1.0",
]


[tool.uv.sources]
build123d = { git = "https://github.com/gumyr/build123d", rev = "v0.7.0" }
cadquery-ocp = { url = "https://github.com/jeremiahrose/ocp-build-system/releases/download/7.7.1.0/cadquery_ocp-7.7.1-cp311-cp311-macosx_11_0_arm64.whl" }
ocp-tessellate = { git = "https://github.com/drbh/ocp-tessellate.git", rev = "add-get-curve-and-surface-utils" }
